--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <h6 class="font-weight-bold">60%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="skill mb-4">
@@ -144,7 +144,7 @@
                             <h6 class="font-weight-bold">60%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="skill mb-4">
@@ -153,7 +153,7 @@
                             <h6 class="font-weight-bold">55%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
@@ -164,7 +164,7 @@
                             <h6 class="font-weight-bold">40%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="skill mb-4">
@@ -182,7 +182,7 @@
                             <h6 class="font-weight-bold">40%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-secondary" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="skill mb-4">
@@ -207,53 +207,60 @@
     <div class="container-fluid py-5" id="qualification">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Quality</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Parcours</h1>
                 <h1 class="position-absolute text-uppercase text-primary">Education & Expericence</h1>
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h3 class="mb-4">My Education</h3>
+                    <h3 class="mb-4">Parcours Scolaire</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
-                            <h5 class="font-weight-bold mb-1">Bachelor of Science</h5>
-                            <p class="mb-2"><strong>Cambridge University</strong> | <small>2005 - 2009</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">Bachelor Architecture des Logiciels</h5>
+                            <p class="mb-2"><strong>ESGI, Campus Sciences-U Lyon</strong> | <small>2022 - 2023</small></p>
+                            <p>Programme Grande Ecole en Informatique - 3ème Année en alternance - Architecture <br> des Logiciels</p>
                         </div>
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px;  font-size: 22px;"></i>
-                            <h5 class="font-weight-bold mb-1">Master In CSE</h5>
-                            <p class="mb-2"><strong>Cambridge University</strong> | <small>2009 - 2011</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">OC Technicien Informatique</h5>
+                            <p class="mb-2"><strong>OpenClassrooms</strong> | <small>2020 - 2021</small></p>
+                            <p>Gestionnaire en maintenance et support informatique</p>
                         </div>
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px;  font-size: 22px;"></i>
-                            <h5 class="font-weight-bold mb-1">IIT Kharagpur</h5>
-                            <p class="mb-2"><strong>Cambridge University</strong> | <small>2011 - 2015</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">1ère année Licence de Droit</h5>
+                            <p class="mb-2"><strong>Université Lyon 3</strong> | <small>2016 - 2017</small></p>
+                            <p>1ère année Licence de Droit au Campus de Bourg-en-Bresse</p>
+                        </div>
+                        <div class="position-relative ex-me mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px;  font-size: 22px;"></i>
+                            <h5 class="font-weight-bold mb-1">BAC STI2D SIN</h5>
+                            <p class="mb-2"><strong>Lycée de la plaine de l'Ain</strong> | <small>2011 - 2014 | Assez bien</small></p>
+                            <p>Baccalauréat Sciences et Techniques de l'Ingénieur et du Développement Durable, option Systèmes d'Informations Numériques</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h3 class="mb-4">My Expericence</h3>
+                    <h3 class="mb-4">Mes Expericences</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
-                            <h5 class="font-weight-bold mb-1">Web Designer</h5>
-                            <p class="mb-2"><strong>Soft Company</strong> | <small> Excellent</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">TECHNICIEN INFORMATIQUE INDUSTRIELLE</h5>
+                            <p class="mb-2"><strong>K-LINE</strong> | <small> CDD - 2021 - 2022</small></p>
+                            <p>Préparations, Réparations poste informatique | Gestion parc informatique | Équipe support N1/N2 (GLPI) | Installation/paramétrage équipements en réseaux | Prise en charge des appels (Centre de Services) | Création MODOP / Procédure</p>
                         </div>
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
-                            <h5 class="font-weight-bold mb-1">Artificial Intelligence</h5>
-                            <p class="mb-2"><strong>Soft Company</strong> | <small> Good</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">Stage Bénévole Informatique</h5>
+                            <p class="mb-2"><strong>HELLO PHARMACIE</strong> | <small> Mai - Aout 2021</small></p>
+                            <p>Stage Bénévole effectué lors de ma formation OpenClassrooms.
+                                <br> Audit des parcs informatiques | Proposition d'amélioration de l'ensemble du parc (Active Directory, Windows Server, renouvellement matériels)</p>
                         </div>
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
-                            <h5 class="font-weight-bold mb-1">Web Development</h5>
-                            <p class="mb-2"><strong>Soft Company</strong> | <small> Excellent</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">Employé Commercial</h5>
+                            <p class="mb-2"><strong>Carrefour Market</strong> | <small> 2019 - 2021</small></p>
+                            <p> Mise en rayon | Réception Camion, marchandise | Drive, relationnel client | Caisse | Gestion des stocks et des commandes</p>
                         </div>
                     </div>
                 </div>
