--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <h1 class="position-absolute text-uppercase text-primary">Mes Intérêts</h1>
             </div>
             <div class="service-h4 position-relative d-flex align-items-center justify-content-center mb-5">
-                    <p ><br>Quels sont mes principaux intérêts dans le développelment ? En voici quelques uns...<br></p>
+                    <p ><br>Quels sont mes principaux intérêts dans le développement ? En voici quelques uns...<br></p>
             </div>
             <div class="row pb-3">
                 <div class="service-box col-lg-4 col-md-6 text-center mb-5">
@@ -296,7 +296,7 @@
             
                 <div class="service-box col-lg-3 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
-                        <i class="fa-sharp fa-solid fa-gamepad fa-2x service-icon bg-primary text-white mr-4"></i>
+                        <i class="fa fa-2x fa-solid fa-gamepad service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Gameplay Programmer</h4>
                     </div>
                     <p>Intégrer le monde du jeu vidéo pour s'épanouir et faire rêver des générations de joueurs comme on m'a fait rêver ! Le goal de tout le monde non ? </p>
