--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand ml-lg-3">
-            <h1 class="m-0 display-5"><span class="text-primary">Porte</span>Folio</h1>
+            <h1 class="m-0 display-5"><span class="text-primary">Port</span>Folio</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -307,7 +307,7 @@
                         <i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Web Design</h4>
                     </div>
-                    <p>Le Web Design représente sans doute la facette la plus représentative du développement moderne. Développer et modeler un site pour le rendre agréable visuellement mais également érgonome ! <small><i>(Un peu comme ce portefolio n'est-ce pas ? Non ?)</i></small></p>
+                    <p>Le Web Design représente sans doute la facette la plus représentative du développement moderne. Développer et modeler un site pour le rendre agréable visuellement mais également érgonome ! <small><i>(Un peu comme ce portfolio n'est-ce pas ? Non ?)</i></small></p>
                     <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
                 </div>
                 <div class="service-box col-lg-4 col-md-6 text-center mb-5">
@@ -360,9 +360,9 @@
             <div class="row portfolio-container">
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio-1.jpg" alt="">
+                        <img class="img-fluid rounded w-100" src="img/portfolio-1.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-1.jpg" data-lightbox="portfolio">
+                            <a href="img/portfolio-1.png" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
                         </div>
@@ -390,9 +390,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio-4.jpg" alt="">
+                        <img class="img-fluid rounded w-100" src="img/portfolio-4.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-4.jpg" data-lightbox="portfolio">
+                            <a href="img/portfolio-4.png" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
                         </div>
@@ -428,7 +428,7 @@
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contact</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Contact Me</h1>
+                <h1 class="position-absolute text-uppercase text-primary">Me Contacter</h1>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -437,19 +437,19 @@
                         <form name="sentMessage" id="contactForm" novalidate="novalidate">
                             <div class="form-row">
                                 <div class="control-group col-sm-6">
-                                    <input type="text" class="form-control p-4" id="name" placeholder="Your Name"
-                                        required="required" data-validation-required-message="Please enter your name" />
+                                    <input type="text" class="form-control p-4" id="name" placeholder="Votre Nom" title="Entrer votre Nom"
+                                        required="required" data-validation-required-message="Veuillez entrer votre nom svp" />
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group col-sm-6">
-                                    <input type="email" class="form-control p-4" id="email" placeholder="Your Email"
-                                        required="required" data-validation-required-message="Please enter your email" />
+                                    <input type="email" class="form-control p-4" id="email" placeholder="Votre Email" title="Entrer votre mail de contact"
+                                        required="required" data-validation-required-message="Veuillez entrer votre email svp" />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <input type="text" class="form-control p-4" id="subject" placeholder="Subject"
-                                    required="required" data-validation-required-message="Please enter a subject" />
+                                <input type="text" class="form-control p-4" id="subject" placeholder="Objet du contact"
+                                    required="required" data-validation-required-message="Entrer un intitulé d'objet" />
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group">
@@ -459,8 +459,7 @@
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div>
-                                <button class="btn btn-outline-primary" type="submit" id="sendMessageButton">Send
-                                    Message</button>
+                                <button class="btn btn-outline-primary" type="submit" id="sendMessageButton" title="Envoyer le formulaire de contact">Envoyer un message</button>
                             </div>
                         </form>
                     </div>
@@ -476,18 +475,22 @@
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
                 <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/bertrand.renaudin.5"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/bertrand-renaudin/"><i class="fab fa-linkedin-in"></i></a>
                 <a class="btn btn-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="d-flex justify-content-center mb-3">
-                <a class="text-white" href="#">Privacy</a>
+                <a id= "popup-trigger1" class="popup-trigger text-white">Privacy</a>
                 <span class="px-3">|</span>
-                <a class="text-white" href="#">Terms</a>
+                <a id= "popup-trigger2" class="popup-trigger text-white">Terms</a>
                 <span class="px-3">|</span>
-                <a class="text-white" href="#">FAQs</a>
+                <a id= "popup-trigger3" class="popup-trigger text-white">FAQs</a>
                 <span class="px-3">|</span>
-                <a class="text-white" href="#">Help</a>
+                <a id= "popup-trigger4" class="popup-trigger text-white">Help</a>
+            </div>
+            <div class="popup">
+                <div class="popup-text">Désolé, c'était juste pour faire pro, en fait ici j'ai rien à mettre.</div>
+                <span class="popup-btn-close">&times;</span>
             </div>
             <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">RENAUDIN Bertrand</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="#">RENAUDIN Bertrand</a>
             </p>
