Travail du 27-09-2022 afinnage

--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
                 <a href="#skill" class="nav-item nav-link">Compétences</a>
                 <a href="#interet" class="nav-item nav-link">Intérêts</a>
                 <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
-                <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-menu d-none d-lg-block" style="background-color:#457efa; color: #ffffff;">M'embaucher</a>
+            <a href="" class="btn btn-menu d-none d-lg-block" style="background-color:#ff704f; color: #ffffff;">M'embaucher</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -54,7 +53,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid bg-primary d-flex align-items-center mb-5 py-5" id="home" style="min-height: 100vh;">
+    <div class="container-fluid d-flex align-items-center mb-5 py-5" id="home" style="min-height: 100vh;background-color:rgb(33, 57, 225);">
         <div class="container">
             <div class="row align-items-center">
 
@@ -65,9 +64,9 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Web Designer, Web Developer, FullStack Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="" class="btn btn-white mr-4">Télécharger le CV</a>
+                        <a href="docs/CV RENAUDIN Bertrand.pdf" class="btn btn-white mr-4" target="_blank">Télécharger le CV</a>
 
-                        <a href="" class="btn btn-blue d-none d-sm-block">A propos de moi</a>
+                        <a href="" class="btn btn-white d-none d-sm-block">A propos de moi</a>
                     </div>
                 </div>
                 <div class="col-lg-4 px-8 pl-lg-0 pb-5 pb-lg-4 about-img">
@@ -105,8 +104,8 @@
                         <div class="col-sm-6 py-2"><h6>Télétravail : <span class="text-secondary">Disponible</span></h6></div>
                     </div>
                 <!-- button -->
-                <a href="" class="btn btn-outline-primary blue mr-4 mb-5">Embaucher</a>
-                <a href="" class="btn btn-outline-primary white mb-5">En apprendre plus</a>
+                <a href="" class="btn btn-outline-primary btn-white mr-4 mb-5">Embaucher</a>
+                <a href="" class="btn btn-outline-primary btn-white mb-5">En apprendre plus</a>
             </div>
         </div>
     </div>
@@ -287,24 +286,22 @@
             <div class="row pb-3">
                 <div class="service-box col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
-                        <i class="fa fa-2x fa-laptop service-icon bg-primary text-white mr-3"></i>
+                        <i class="fa fa-2x fa-laptop service-icon text-white mr-3" style="background-color:rgb(33, 57, 225);"></i>
                         <h4 class="font-weight-bold m-0">Développement</h4>
                     </div>
                     <p>Parfait mélange entre créativité et formalisme, le développement informatique est une matière riche et exponentielle.</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
                 </div>
             
                 <div class="service-box col-lg-3 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
-                        <i class="fa fa-2x fa-solid fa-gamepad service-icon bg-primary text-white mr-3"></i>
+                        <i class="fa fa-2x fa-solid fa-gamepad service-icon text-white mr-3" style="background-color:rgb(33, 57, 225);"></i>
                         <h4 class="font-weight-bold m-0">Gameplay Programmer</h4>
                     </div>
                     <p>Intégrer le monde du jeu vidéo pour s'épanouir et faire rêver des générations de joueurs comme on m'a fait rêver ! Le goal de tout le monde non ? </p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
                 </div>
                 <div class="service-box col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
-                        <i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i>
+                        <i class="fa fa-2x fa-laptop-code service-icon text-white mr-3" style="background-color:rgb(33, 57, 225);"></i>
                         <h4 class="font-weight-bold m-0">Web Design</h4>
                     </div>
                     <p>Le Web Design représente sans doute la facette la plus représentative du développement moderne. Développer et modeler un site pour le rendre agréable visuellement mais également érgonome ! <small><i>(Un peu comme ce portfolio n'est-ce pas ? Non ?)</i></small></p>
@@ -312,7 +309,7 @@
                 </div>
                 <div class="service-box col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
-                        <i class="fab fa-2x fa-apple service-icon bg-primary text-white mr-3"></i>
+                        <i class="fab fa-2x fa-apple service-icon text-white mr-3" style="background-color:rgb(33, 57, 225);"></i>
                         <h4 class="font-weight-bold m-0">Apps Development</h4>
                     </div>
                     <p>Développer des applications fonctionnelles et design pour les smartphones et autres appareils connectés, une branche moderne du développelment la rendant très attirante !</p>
@@ -320,7 +317,7 @@
                 </div>
                 <div class="service-box col-lg-3 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
-                        <i class="fa fa-2x fa-database service-icon bg-primary text-white mr-3"></i>
+                        <i class="fa fa-2x fa-database service-icon text-white mr-3" style="background-color:rgb(33, 57, 225);"></i>
                         <h4 class="font-weight-bold m-0">DATABASE</h4>
                     </div>
                     <p>Manipuler, stocker, et exploiter des tonnes et des tonnes de données, de quoi en effrayer plus d'un !</p>
@@ -328,7 +325,7 @@
                 </div>
                 <div class="service-box col-lg-4  col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
-                        <i class="fa fa-2x fa-edit service-icon bg-primary text-white mr-3"></i>
+                        <i class="fa fa-2x fa-edit service-icon text-white mr-3" style="background-color:rgb(33, 57, 225);"></i>
                         <h4 class="font-weight-bold m-0">Content Creating</h4>
                     </div>
                     <p>La création de contenu, que ce soit graphique ou utile permet à mon sens de mettre la créativité de chacun au service de tous. <br><small><i>"On souhaite tous créer quelque chose, laisser une marque de sa créativité et de sa façon de penser." <br> Bertrand RENAUDIN</i></small></p>
@@ -423,55 +420,8 @@
     </div>
     <!-- Portfolio End -->
 
-    <!-- Contact Start -->
-    <div class="container-fluid py-5" id="contact">
-        <div class="container">
-            <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contact</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Me Contacter</h1>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="contact-form text-center">
-                        <div id="success"></div>
-                        <form name="sentMessage" id="contactForm" novalidate="novalidate">
-                            <div class="form-row">
-                                <div class="control-group col-sm-6">
-                                    <input type="text" class="form-control p-4" id="name" placeholder="Votre Nom" title="Entrer votre Nom"
-                                        required="required" data-validation-required-message="Veuillez entrer votre nom svp" />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="control-group col-sm-6">
-                                    <input type="email" class="form-control p-4" id="email" placeholder="Votre Email" title="Entrer votre mail de contact"
-                                        required="required" data-validation-required-message="Veuillez entrer votre email svp" />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <input type="text" class="form-control p-4" id="subject" placeholder="Objet du contact"
-                                    required="required" data-validation-required-message="Entrer un intitulé d'objet" />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="control-group">
-                                <textarea class="form-control py-3 px-4" rows="5" id="message" placeholder="Message"
-                                    required="required"
-                                    data-validation-required-message="Please enter your message"></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div>
-                                <button class="btn btn-outline-primary" type="submit" id="sendMessageButton" title="Envoyer le formulaire de contact">Envoyer un message</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Contact End -->
-
-
     <!-- Footer Start -->
-    <div class="container-fluid bg-primary text-white mt-5 py-1 px-sm-1 px-md-5">
+    <div class="container-fluid text-white mt-5 py-1 px-sm-1 px-md-5" style="background-color:rgb(33, 57, 225);">
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
                 <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
