--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style_intro.css">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51">
@@ -50,7 +51,182 @@
     </nav>
     <!-- Navbar End -->
 
-
+<!-- partial:index.partial.html -->
+<div id="container">
+    <!-- Edit the letter attr to: N, E, T, F, L, I or X -->
+       <netflixintro letter="N">
+        <div class="helper-1">
+          <div class="effect-brush">
+            <span class="fur-31"></span>
+            <span class="fur-30"></span>
+            <span class="fur-29"></span>
+            <span class="fur-28"></span>
+            <span class="fur-27"></span>
+            <span class="fur-26"></span>
+            <span class="fur-25"></span>
+            <span class="fur-24"></span>
+            <span class="fur-23"></span>
+            <span class="fur-22"></span>
+            <span class="fur-21"></span>
+            <span class="fur-20"></span>
+            <span class="fur-19"></span>
+            <span class="fur-18"></span>
+            <span class="fur-17"></span>
+            <span class="fur-16"></span>
+            <span class="fur-15"></span>
+            <span class="fur-14"></span>
+            <span class="fur-13"></span>
+            <span class="fur-12"></span>
+            <span class="fur-11"></span>
+            <span class="fur-10"></span>
+            <span class="fur-9"></span>
+            <span class="fur-8"></span>
+            <span class="fur-7"></span>
+            <span class="fur-6"></span>
+            <span class="fur-5"></span>
+            <span class="fur-4"></span>
+            <span class="fur-3"></span>
+            <span class="fur-2"></span>
+            <span class="fur-1"></span>
+          </div>
+          <div class="effect-lumieres">
+            <span class="lamp-1"></span>
+            <span class="lamp-2"></span>
+            <span class="lamp-3"></span>
+            <span class="lamp-4"></span>
+            <span class="lamp-5"></span>
+            <span class="lamp-6"></span>
+            <span class="lamp-7"></span>
+            <span class="lamp-8"></span>
+            <span class="lamp-9"></span>
+            <span class="lamp-10"></span>
+            <span class="lamp-11"></span>
+            <span class="lamp-12"></span>
+            <span class="lamp-13"></span>
+            <span class="lamp-14"></span>
+            <span class="lamp-15"></span>
+            <span class="lamp-16"></span>
+            <span class="lamp-17"></span>
+            <span class="lamp-18"></span>
+            <span class="lamp-19"></span>
+            <span class="lamp-20"></span>
+            <span class="lamp-21"></span>
+            <span class="lamp-22"></span>
+            <span class="lamp-23"></span>
+            <span class="lamp-24"></span>
+            <span class="lamp-25"></span>
+            <span class="lamp-26"></span>
+            <span class="lamp-27"></span>
+            <span class="lamp-28"></span>
+          </div>
+        </div>
+        <div class="helper-2">
+          <div class="effect-brush">
+            <span class="fur-31"></span>
+            <span class="fur-30"></span>
+            <span class="fur-29"></span>
+            <span class="fur-28"></span>
+            <span class="fur-27"></span>
+            <span class="fur-26"></span>
+            <span class="fur-25"></span>
+            <span class="fur-24"></span>
+            <span class="fur-23"></span>
+            <span class="fur-22"></span>
+            <span class="fur-21"></span>
+            <span class="fur-20"></span>
+            <span class="fur-19"></span>
+            <span class="fur-18"></span>
+            <span class="fur-17"></span>
+            <span class="fur-16"></span>
+            <span class="fur-15"></span>
+            <span class="fur-14"></span>
+            <span class="fur-13"></span>
+            <span class="fur-12"></span>
+            <span class="fur-11"></span>
+            <span class="fur-10"></span>
+            <span class="fur-9"></span>
+            <span class="fur-8"></span>
+            <span class="fur-7"></span>
+            <span class="fur-6"></span>
+            <span class="fur-5"></span>
+            <span class="fur-4"></span>
+            <span class="fur-3"></span>
+            <span class="fur-2"></span>
+            <span class="fur-1"></span>
+          </div>
+        </div>
+        <div class="helper-3">
+          <div class="effect-brush">
+            <span class="fur-31"></span>
+            <span class="fur-30"></span>
+            <span class="fur-29"></span>
+            <span class="fur-28"></span>
+            <span class="fur-27"></span>
+            <span class="fur-26"></span>
+            <span class="fur-25"></span>
+            <span class="fur-24"></span>
+            <span class="fur-23"></span>
+            <span class="fur-22"></span>
+            <span class="fur-21"></span>
+            <span class="fur-20"></span>
+            <span class="fur-19"></span>
+            <span class="fur-18"></span>
+            <span class="fur-17"></span>
+            <span class="fur-16"></span>
+            <span class="fur-15"></span>
+            <span class="fur-14"></span>
+            <span class="fur-13"></span>
+            <span class="fur-12"></span>
+            <span class="fur-11"></span>
+            <span class="fur-10"></span>
+            <span class="fur-9"></span>
+            <span class="fur-8"></span>
+            <span class="fur-7"></span>
+            <span class="fur-6"></span>
+            <span class="fur-5"></span>
+            <span class="fur-4"></span>
+            <span class="fur-3"></span>
+            <span class="fur-2"></span>
+            <span class="fur-1"></span>
+          </div>
+        </div>
+        <div class="helper-4">
+          <div class="effect-brush">
+            <span class="fur-31"></span>
+            <span class="fur-30"></span>
+            <span class="fur-29"></span>
+            <span class="fur-28"></span>
+            <span class="fur-27"></span>
+            <span class="fur-26"></span>
+            <span class="fur-25"></span>
+            <span class="fur-24"></span>
+            <span class="fur-23"></span>
+            <span class="fur-22"></span>
+            <span class="fur-21"></span>
+            <span class="fur-20"></span>
+            <span class="fur-19"></span>
+            <span class="fur-18"></span>
+            <span class="fur-17"></span>
+            <span class="fur-16"></span>
+            <span class="fur-15"></span>
+            <span class="fur-14"></span>
+            <span class="fur-13"></span>
+            <span class="fur-12"></span>
+            <span class="fur-11"></span>
+            <span class="fur-10"></span>
+            <span class="fur-9"></span>
+            <span class="fur-8"></span>
+            <span class="fur-7"></span>
+            <span class="fur-6"></span>
+            <span class="fur-5"></span>
+            <span class="fur-4"></span>
+            <span class="fur-3"></span>
+            <span class="fur-2"></span>
+            <span class="fur-1"></span>
+          </div>
+        </div>
+      </netflixintro>
+    </div>
 
     <!-- Header Start -->
     <div class="container-fluid d-flex align-items-center mb-5 py-5" id="home" style="min-height: 100vh;background-color:rgb(33, 57, 225);">
@@ -452,7 +628,7 @@
     <i class="fa fa-2x fa-angle-down text-white scroll-to-bottom"></i>
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-outline-dark px-0 back-to-top"><i class="fa fa-angle-double-up"></i></a>
+    <a href="#about" class="btn btn-outline-dark px-0 back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
