Travail du 28-09-2022 new branche

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
-    <title>RENAUDIN Bertrand</title>
+    <title>FreeFolio - Freelancer Portfolio Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
-    
+
     <!-- Favicon -->
-    <link href="img/favicon.png" rel="icon">
+    <link href="img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -25,7 +25,6 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style_intro.css">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51">
@@ -50,183 +49,6 @@
         </div>
     </nav>
     <!-- Navbar End -->
-
-<!-- partial:index.partial.html -->
-<div id="container">
-    <!-- Edit the letter attr to: N, E, T, F, L, I or X -->
-       <netflixintro letter="N">
-        <div class="helper-1">
-          <div class="effect-brush">
-            <span class="fur-31"></span>
-            <span class="fur-30"></span>
-            <span class="fur-29"></span>
-            <span class="fur-28"></span>
-            <span class="fur-27"></span>
-            <span class="fur-26"></span>
-            <span class="fur-25"></span>
-            <span class="fur-24"></span>
-            <span class="fur-23"></span>
-            <span class="fur-22"></span>
-            <span class="fur-21"></span>
-            <span class="fur-20"></span>
-            <span class="fur-19"></span>
-            <span class="fur-18"></span>
-            <span class="fur-17"></span>
-            <span class="fur-16"></span>
-            <span class="fur-15"></span>
-            <span class="fur-14"></span>
-            <span class="fur-13"></span>
-            <span class="fur-12"></span>
-            <span class="fur-11"></span>
-            <span class="fur-10"></span>
-            <span class="fur-9"></span>
-            <span class="fur-8"></span>
-            <span class="fur-7"></span>
-            <span class="fur-6"></span>
-            <span class="fur-5"></span>
-            <span class="fur-4"></span>
-            <span class="fur-3"></span>
-            <span class="fur-2"></span>
-            <span class="fur-1"></span>
-          </div>
-          <div class="effect-lumieres">
-            <span class="lamp-1"></span>
-            <span class="lamp-2"></span>
-            <span class="lamp-3"></span>
-            <span class="lamp-4"></span>
-            <span class="lamp-5"></span>
-            <span class="lamp-6"></span>
-            <span class="lamp-7"></span>
-            <span class="lamp-8"></span>
-            <span class="lamp-9"></span>
-            <span class="lamp-10"></span>
-            <span class="lamp-11"></span>
-            <span class="lamp-12"></span>
-            <span class="lamp-13"></span>
-            <span class="lamp-14"></span>
-            <span class="lamp-15"></span>
-            <span class="lamp-16"></span>
-            <span class="lamp-17"></span>
-            <span class="lamp-18"></span>
-            <span class="lamp-19"></span>
-            <span class="lamp-20"></span>
-            <span class="lamp-21"></span>
-            <span class="lamp-22"></span>
-            <span class="lamp-23"></span>
-            <span class="lamp-24"></span>
-            <span class="lamp-25"></span>
-            <span class="lamp-26"></span>
-            <span class="lamp-27"></span>
-            <span class="lamp-28"></span>
-          </div>
-        </div>
-        <div class="helper-2">
-          <div class="effect-brush">
-            <span class="fur-31"></span>
-            <span class="fur-30"></span>
-            <span class="fur-29"></span>
-            <span class="fur-28"></span>
-            <span class="fur-27"></span>
-            <span class="fur-26"></span>
-            <span class="fur-25"></span>
-            <span class="fur-24"></span>
-            <span class="fur-23"></span>
-            <span class="fur-22"></span>
-            <span class="fur-21"></span>
-            <span class="fur-20"></span>
-            <span class="fur-19"></span>
-            <span class="fur-18"></span>
-            <span class="fur-17"></span>
-            <span class="fur-16"></span>
-            <span class="fur-15"></span>
-            <span class="fur-14"></span>
-            <span class="fur-13"></span>
-            <span class="fur-12"></span>
-            <span class="fur-11"></span>
-            <span class="fur-10"></span>
-            <span class="fur-9"></span>
-            <span class="fur-8"></span>
-            <span class="fur-7"></span>
-            <span class="fur-6"></span>
-            <span class="fur-5"></span>
-            <span class="fur-4"></span>
-            <span class="fur-3"></span>
-            <span class="fur-2"></span>
-            <span class="fur-1"></span>
-          </div>
-        </div>
-        <div class="helper-3">
-          <div class="effect-brush">
-            <span class="fur-31"></span>
-            <span class="fur-30"></span>
-            <span class="fur-29"></span>
-            <span class="fur-28"></span>
-            <span class="fur-27"></span>
-            <span class="fur-26"></span>
-            <span class="fur-25"></span>
-            <span class="fur-24"></span>
-            <span class="fur-23"></span>
-            <span class="fur-22"></span>
-            <span class="fur-21"></span>
-            <span class="fur-20"></span>
-            <span class="fur-19"></span>
-            <span class="fur-18"></span>
-            <span class="fur-17"></span>
-            <span class="fur-16"></span>
-            <span class="fur-15"></span>
-            <span class="fur-14"></span>
-            <span class="fur-13"></span>
-            <span class="fur-12"></span>
-            <span class="fur-11"></span>
-            <span class="fur-10"></span>
-            <span class="fur-9"></span>
-            <span class="fur-8"></span>
-            <span class="fur-7"></span>
-            <span class="fur-6"></span>
-            <span class="fur-5"></span>
-            <span class="fur-4"></span>
-            <span class="fur-3"></span>
-            <span class="fur-2"></span>
-            <span class="fur-1"></span>
-          </div>
-        </div>
-        <div class="helper-4">
-          <div class="effect-brush">
-            <span class="fur-31"></span>
-            <span class="fur-30"></span>
-            <span class="fur-29"></span>
-            <span class="fur-28"></span>
-            <span class="fur-27"></span>
-            <span class="fur-26"></span>
-            <span class="fur-25"></span>
-            <span class="fur-24"></span>
-            <span class="fur-23"></span>
-            <span class="fur-22"></span>
-            <span class="fur-21"></span>
-            <span class="fur-20"></span>
-            <span class="fur-19"></span>
-            <span class="fur-18"></span>
-            <span class="fur-17"></span>
-            <span class="fur-16"></span>
-            <span class="fur-15"></span>
-            <span class="fur-14"></span>
-            <span class="fur-13"></span>
-            <span class="fur-12"></span>
-            <span class="fur-11"></span>
-            <span class="fur-10"></span>
-            <span class="fur-9"></span>
-            <span class="fur-8"></span>
-            <span class="fur-7"></span>
-            <span class="fur-6"></span>
-            <span class="fur-5"></span>
-            <span class="fur-4"></span>
-            <span class="fur-3"></span>
-            <span class="fur-2"></span>
-            <span class="fur-1"></span>
-          </div>
-        </div>
-      </netflixintro>
-    </div>
 
     <!-- Header Start -->
     <div class="container-fluid d-flex align-items-center mb-5 py-5" id="home" style="min-height: 100vh;background-color:rgb(33, 57, 225);">
@@ -267,7 +89,7 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Alternant Développeur FullStack</h3>
-                    <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum. Amet dolor stet lorem diam dolor justo et dolor dolor dolor</p>
+                    <p>Bienvenue sur mon Portfolio ! Moi c'est Bertrand. J'ai eu 26 cette année et je suis à la recherche d'une alternance en développement. Passionné par ce domaine dans lequel je pourrais passer mes journées, comme l'enfant que j'étais devant sa PS2 ! aujourd'hui j'ai décidé de reprendre mes études c'est pour ça que je recherche aujourd'hui une entreprise, une équipe qui pourrait me prendre sur son <strong>BATEAU</strong> afin de continuer à m'épanouir et à apprendre.</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Nom : <span class="text-secondary">Bertrand RENAUDIN</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Date de naissance : <span class="text-secondary">28 août 1996</span></h6></div>
@@ -288,7 +110,7 @@
     <!-- About End -->
 
 
-
+    
     <!-- Skill Start -->
     <div class="container-fluid py-5" id="skill">
         <div class="container">
@@ -480,24 +302,19 @@
                         <i class="fa fa-2x fa-laptop-code service-icon text-white mr-3" style="background-color:rgb(33, 57, 225);"></i>
                         <h4 class="font-weight-bold m-0">Web Design</h4>
                     </div>
-                    <p>Le Web Design représente sans doute la facette la plus représentative du développement moderne. Développer et modeler un site pour le rendre agréable visuellement mais également érgonome ! <small><i>(Un peu comme ce portfolio n'est-ce pas ? Non ?)</i></small></p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
-                </div>
+                    <p>Le Web Design représente sans doute la facette la plus représentative du développement moderne. Développer et modeler un site pour le rendre agréable visuellement mais également érgonome ! <small><i>(Un peu comme ce portfolio n'est-ce pas ? Non ?)</i></small></p>                </div>
                 <div class="service-box col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fab fa-2x fa-apple service-icon text-white mr-3" style="background-color:rgb(33, 57, 225);"></i>
                         <h4 class="font-weight-bold m-0">Apps Development</h4>
                     </div>
-                    <p>Développer des applications fonctionnelles et design pour les smartphones et autres appareils connectés, une branche moderne du développelment la rendant très attirante !</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
-                </div>
+                    <p>Développer des applications fonctionnelles et design pour les smartphones et autres appareils connectés, une branche moderne du développelment la rendant très attirante !</p>                </div>
                 <div class="service-box col-lg-3 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fa fa-2x fa-database service-icon text-white mr-3" style="background-color:rgb(33, 57, 225);"></i>
                         <h4 class="font-weight-bold m-0">DATABASE</h4>
                     </div>
                     <p>Manipuler, stocker, et exploiter des tonnes et des tonnes de données, de quoi en effrayer plus d'un !</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
                 </div>
                 <div class="service-box col-lg-4  col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -505,7 +322,6 @@
                         <h4 class="font-weight-bold m-0">Content Creating</h4>
                     </div>
                     <p>La création de contenu, que ce soit graphique ou utile permet à mon sens de mettre la créativité de chacun au service de tous. <br><small><i>"On souhaite tous créer quelque chose, laisser une marque de sa créativité et de sa façon de penser." <br> Bertrand RENAUDIN</i></small></p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
                 </div>
             </div>
         </div>
@@ -630,10 +446,9 @@
     <!-- Back to Top -->
     <a href="#about" class="btn btn-outline-dark px-0 back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
-
     <!-- JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <script src="lib/typed/typed.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
@@ -647,7 +462,6 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-
 </body>
 
 </html>
